trying to fix blue button colour on iphone

--- a/media.css
+++ b/media.css
@@ -112,6 +112,7 @@
 
     .btn {
         font-size: var(--moble-font-base);
+        color: black;
     }
 
 
